fix cost display overflow

--- a/main1640218140136.css
+++ b/main1640218140136.css
@@ -52,8 +52,8 @@ table.grid {
 }
 table.grid td {
   padding: 0;
-  height: 25px;
-  width: 25px;
+  height: 30px;
+  width: 30px;
   text-align: center;
 }
 td.tile {
@@ -65,12 +65,15 @@ td.gutter {
 .visited {
   background-color: red;
   color: white;
+  font-size: 12px;
 }
 .queued {
   background-color: blue;
   color: white;
+  font-size: 12px;
 }
 .currentnode {
+  font-size: 12px;
   background-color: greenyellow;
 }
 td.tile.selected {
@@ -96,6 +99,6 @@ td.gutter {
   margin-right: 5px;
 }
 .box {
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
 }
